# Stage

./: .travis.yml  CMakeLists.txt  INSTALL.txt
avonstage/: avonstage.cc
examples/ctrl/: CMakeLists.txt  lasernoise.cc
libstage/: model.cc  model_position.cc  world.cc  worldgui.cc
